--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,12 +5,13 @@ include(cmake/debug_func.cmake)
 
 set(CMAKE_CXX_STANDARD 14)
 
-set(protobuf_BUILD_TESTS OFF)
 FetchContent_Declare(
   protobuf
   URL https://assets.grgreye.com/libs/protobuf-3.19.2.zip
 )
 FetchContent_MakeAvailable(protobuf)
+option(protobuf_BUILD_TESTS "Build tests" OFF)
+set(protobuf_BUILD_TESTS OFF)
 add_subdirectory(${protobuf_SOURCE_DIR}/cmake)
 include_directories(${protobuf_SOURCE_DIR}/src)
 
@@ -24,7 +25,6 @@ FetchContent_Declare(
   URL https://assets.grgreye.com/googletest-release
 )
 FetchContent_MakeAvailable(gtest)
-
 include_directories(${gtest_SOURCE_DIR}/googlemock/include)
 include_directories(${gtest_SOURCE_DIR}/googletest/include)
 
@@ -32,6 +32,12 @@ FetchContent_Declare(
   rapidjson
   URL https://assets.grgreye.com/libs/rapidjson-1.1.0.zip
 )
+option(RAPIDJSON_BUILD_DOC "Build rapidjson documentation." OFF)
+option(RAPIDJSON_BUILD_EXAMPLES "Build rapidjson examples." OFF)
+option(RAPIDJSON_BUILD_TESTS "Build rapidjson perftests and unittests." OFF)
+set(RAPIDJSON_BUILD_DOC OFF)
+set(RAPIDJSON_BUILD_EXAMPLES OFF)
+set(RAPIDJSON_BUILD_TESTS OFF)
 FetchContent_MakeAvailable(rapidjson)
 include_directories(${rapidjson_SOURCE_DIR}/include)
 
@@ -39,3 +45,8 @@ add_executable(tests ${all_tests_files} ${common_test_files} ${all_proto_files})
 add_dependencies(tests libprotobuf)
 target_link_libraries(tests gmock_main)
 target_link_libraries(tests libprotobuf)
+
+add_custom_target(check
+  COMMAND tests --gtest_brief=1
+  DEPENDS tests
+  WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})
